Implementação de novo projeto na seção de projetos
- Adicionando novo projeto à página.
- Pequenas alterações no estilo do site para melhorar a aparência.

--- a/src/app/components/about-me/about-me.component.sass
+++ b/src/app/components/about-me/about-me.component.sass
@@ -7,6 +7,7 @@
     flex-direction: column
     gap: 3rem
     margin-top: $primary-margin-top
+    background: #111111
 
     .container-about
         width: $element-width
@@ -110,7 +111,6 @@
 @media (max-width: 440px)
     .s-about
         .container-about
-            img
             .right-about
                 p
                     width: 45%
