--- a/src/app/components/my-projects/my-projects.component.sass
+++ b/src/app/components/my-projects/my-projects.component.sass
@@ -67,6 +67,8 @@
             height: $element-height
         .card-project-technology 
             margin-top: 0.5rem
+            h2
+              font-size: 1rem
             .card-project-icons-tool 
                 position: relative
 
