--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,11 +6,15 @@
     <a (click)="scrollToElement('nav-skills')">Tecnologias</a>
     <a (click)="scrollToElement('nav-projects')">Projetos</a>
     <a (click)="scrollToElement('nav-certificate')">Certificados</a>
-    <a (click)="scrollToElement('nav-footer')">Fale Comigo</a>
+    <a (click)="scrollToElement('nav-talk-to-me')">Fale Comigo</a>
   </div>
   <div class="social">
-    <a href=""><i class="fa-brands fa-github"></i></a>
-    <a href=""><i class="fa-brands fa-instagram"></i></a>
+    <a href="http://github.com/kelvenwyllames"
+      ><i class="fa-brands fa-github"></i
+    ></a>
+    <a href="http://instagram.com/kelvenwyllames/"
+      ><i class="fa-brands fa-instagram"></i
+    ></a>
   </div>
 
   <div class="toggle_btn">
@@ -23,6 +27,6 @@
     <a (click)="scrollToElement('nav-skills')">Tecnologias</a>
     <a (click)="scrollToElement('nav-projects')">Projetos</a>
     <a (click)="scrollToElement('nav-certificate')">Certificados</a>
-    <a (click)="scrollToElement('nav-footer')">Fale Comigo</a>
+    <a (click)="scrollToElement('nav-talk-to-me')">Fale Comigo</a>
   </div>
 </nav>
