--- a/src/app/components/navbar/navbar.component.sass
+++ b/src/app/components/navbar/navbar.component.sass
@@ -46,9 +46,11 @@ nav
       border-radius: 0.2rem
       color: $color-light
       background: #a1300b96
+      transition: 600ms
 
       &:hover
         background: #a1310b
+        transform: scale(0.95)
 
   .dropdown_menu
     position: absolute
