--- a/src/app/shared/components/social-media-icons/social-media-icons.component.sass
+++ b/src/app/shared/components/social-media-icons/social-media-icons.component.sass
@@ -20,10 +20,12 @@
             border: 2.5px solid rgba(65, 62, 62, 0.76)
             background-color: #1a1a1a
             text-decoration: none
+            transition: 600ms
 
             &:hover
                 border: 2.5px solid $quaternary-color-with-opacity
                 color: $secondary-color
+                transform: scale(0.95)
 
         > h2
             font-size: 20px
