--- a/src/app/shared/components/social-media-icons/social-media-icons.component.html
+++ b/src/app/shared/components/social-media-icons/social-media-icons.component.html
@@ -1,20 +1,20 @@
 <article class="social-media">
   <div class="social-media-icon">
-    <a href="http://" target="_blank">
+    <a href="http://github.com/kelvenwyllames" target="_blank">
       <i class="fa-brands fa-github icon"></i>
     </a>
     <h2>GitHub</h2>
     <p>Kelven Wyllames</p>
   </div>
   <div class="social-media-icon">
-    <a href="http://" target="_blank">
+    <a href="https://www.linkedin.com/in/kelvenwyllames/" target="_blank">
       <i class="fa-brands fa-linkedin icon"></i>
     </a>
     <h2>Linkedin</h2>
     <p>Kelven Wyllames</p>
   </div>
   <div class="social-media-icon">
-    <a href="http://" target="_blank">
+    <a href="http://instagram.com/kelvenwyllames/" target="_blank">
       <i class="fa-brands fa-instagram icon"></i>
     </a>
     <h2>Instagram</h2>
